tests/algorithms/x/Java/machine_learning/self_organizing_map.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden520_self_organizing_map1651171140/001/Main.java:27: error: incompatible types: double[] cannot be converted to Object[]
            s = s + _p(_geto(xs, i));
                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
